refact: use stream.toList